# rust-basic-eq-plugin

./: Cargo.toml  README.md
scripts/: macos-build-and-install.sh
src/: atomic_bool.rs  editor.rs  editor_elements.rs  eq_effect_parameters.rs  lib.rs  parameter.rs  units.rs
